EEA / Fix some layout break due to template API.

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -313,6 +313,12 @@ div.gn-scroll-spy {
   z-index: 2000;
 }
 
+// EEA template make it too small
+.modal-body {
+  height: 80vh;
+  overflow: auto;
+}
+
 .onlinesrc-popup, .gn-modal-lg {
   max-width: none;
   max-height: none;
